checking permission according presets
